// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LiProposal has the expected html structure 1`] = `
<tr
  class="data-table__row li-proposal"
>
  <td
    class="data-table__row__info"
  >
    <div
      class="data-table__row__info__container"
    >
      <span
        class="data-table__row__info__container__status material-icons"
      >
        
        checkmark
      
      </span>
       
      <router-link-stub
        class="data-table__row__info__container__name"
        to="[object Object]"
      >
        
        Proposal Title
      
      </router-link-stub>
       
      <p
        class="data-table__row__info__container__description"
      >
        
        Proposal description
      
      </p>
    </div>
  </td>
   
  <td>
    #1
  </td>
   
  <td
    class="li-proposal__value yes"
  >
    
    84.6%
  
  </td>
   
  <td
    class="li-proposal__value no"
  >
    
    4.23%
  
  </td>
   
  <td
    class="li-proposal__value no_with_veto"
  >
    
    1.69%
  
  </td>
   
  <td
    class="li-proposal__value abstain"
  >
    
    9.48%
  
  </td>
</tr>
`;

exports[`LiProposal should survive the tally result not being present yet 1`] = `
<tr
  class="data-table__row li-proposal"
>
  <td
    class="data-table__row__info"
  >
    <div
      class="data-table__row__info__container"
    >
      <span
        class="data-table__row__info__container__status material-icons"
      >
        
        checkmark
      
      </span>
       
      <router-link-stub
        class="data-table__row__info__container__name"
        to="[object Object]"
      >
        
        Proposal Title
      
      </router-link-stub>
       
      <p
        class="data-table__row__info__container__description"
      >
        
        Proposal description
      
      </p>
    </div>
  </td>
   
  <td>
    #1
  </td>
   
  <td
    class="li-proposal__value yes"
  >
    
    0.01%
  
  </td>
   
  <td
    class="li-proposal__value no"
  >
    
    0.01%
  
  </td>
   
  <td
    class="li-proposal__value no_with_veto"
  >
    
    0.01%
  
  </td>
   
  <td
    class="li-proposal__value abstain"
  >
    
    0.01%
  
  </td>
</tr>
`;
